--- a/CRUDASP/Views/Mantenedor/Guardar.cshtml
+++ b/CRUDASP/Views/Mantenedor/Guardar.cshtml
@@ -1,26 +1,32 @@
-﻿
+﻿@model ContactoModel
 @{
     ViewData["Title"] = "Guardar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <div class="card">
     <h5 class="card-header">Crear Contacto</h5>
     <div class="card-body">
-        <form>
+        <form asp-action="Guardar" asp-controller="Mantenedor" method="post">
             <div class="form-group">
-                <label for="exampleInputEmail1">Nombre</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <label >Nombre</label>
+                <input type="text" asp-for="Nombre" class="form-control" placeholder="Ingresa Nombre">
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Telefono</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <input type="text" asp-for="Telefono" class="form-control" placeholder="Telefono">
+                <span asp-validation-for="Telefono" class="text-danger"></span>
+
             </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Correo</label>
+                <input type="text" asp-for="Correo" class="form-control" placeholder="Correo">
+                <span asp-validation-for="Correo" class="text-danger"></span>
+
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <a asp-action="Listar" asp-controller="Mantenedor" class="btn btn-warning">Volver a la lista</a>
         </form>
     </div>
 </div>
