--- a/CRUDASP/Views/Mantenedor/Listar.cshtml
+++ b/CRUDASP/Views/Mantenedor/Listar.cshtml
@@ -1,8 +1,36 @@
-﻿
+﻿@model List<ContactoModel>
 @{
     ViewData["Title"] = "Listar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Listar</h1>
+<div class="card">
+    <h5 class="card-header">Listar Contacto</h5>
+    <div class="card-body">
+        <a asp-action="Listar" asp-controller="Mantenedor" class="btn btn-success">Crear nuevo</a>
+        <hr />
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Telefono</th>
+                    <th>Correo</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Nombre</td>
+                        <td>@item.Telefono</td>
+                        <td>@item.Correo</td>
+                        <td></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
 
